# sync-typing-deps

./: .mergify.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml
src/: deps.rs  error.rs  lib.rs  main.rs  precommit.rs
tests/: integration_test.rs
