[[bin]]
name = "sync-typing-deps"
path = "src/main.rs"

[dependencies]
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "1.1"

[dev-dependencies]
rstest = "0.26"
tempfile = "3"

[package]
categories = ["command-line-utilities", "development-tools"]
description = "Sync typing hook additional_dependencies from project dev deps"
edition = "2021"
keywords = ["mypy", "pre-commit", "ty", "typing"]
license = "MIT"
name = "sync-typing-deps"
readme = "README.md"
repository = "https://github.com/mxr/sync-typing-deps"
version = "0.5.2"
